# fastapi-postgres-project

./: .env.example  .gitignore  Dockerfile  README.md  SECURITY_FIXES_APPLIED.md  SECURITY_FIXES_SUMMARY.md  WARP.md  agents_tables.sql  docker-compose.ssh.yml  docker-compose.yml  locustfile.py  main.py  messages.sql  openapi.yaml  pyproject.toml  temp.set_env.sh  verify_ssh_feature.py
app/: __init__.py  database.py  main.py  security.py  ssh_tunnel.py
issues/: Issues_PipelineID_aicodescanningworkflow_ExecutionID_J-C37lusRE6xM0PhzQoXXw.csv  Issues_PipelineID_aicodescanningworkflow_ExecutionID_g3dnWPLqQNeM8vRS-2sOjQ.csv  Issues_PipelineID_aicodescanningworkflow_ExecutionID_ou1cVfJZQeyYiQCwjaN2ow.csv
k8s/: README.md  api-deployment.yaml  cleanup.sh  configmap.yaml  deploy.sh  fastapi-deployment.yaml  hpa.yaml  locust-deployment.yaml  locust-network-policy.yaml  namespace.yaml  network-policies.yaml  postgres-deployment.yaml  postgres-secret.yaml  postgres-storage.yaml  secrets.yaml  service-accounts.yaml  services.yaml  setup-secrets.sh  storage.yaml
specs/: feature-10-add-parse-file-execute-fix.md  feature-11-assign-tasks.md  feature-12-k8s-deployment-qa.md  feature-14-add-locust.md  feature-15-add-timed-messages.md  feature-2-add-messages-tables.md  feature-3-pull-messages-for-agent.md  feature-4-add-conversation-table-other-sql.md  feature-5-add-cli-support.md  feature-6-fix-checkov.md  feature-7-add-k8s-deployment.md  feature-7-add-ssh-db-connection.md  feature-8-add-openapi.md  feature-9-pull-file-from-s3.md  fix-issues.md
tests/: conftest.py  test_api.py  (+7 more)
(+14 files in other folders)
