[project]
name = "fastapi-postgres-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.121.1",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.38.0",
    "sshtunnel>=0.4.0",
    "paramiko<3.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
]
