[project]
name = "fastapi-postgres-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.121.1",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.38.0",
    "sshtunnel>=0.4.0",
    "boto3>=1.35.0",
    "urllib3>=2.6.0",
    "werkzeug>=3.1.4",
    "paramiko>=3.4.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "moto[s3]>=5.0.0",
    "ruff>=0.7.0",
    "pylint>=3.0.0",
    "locust>=2.32.0",
    "pytest-anyio>=0.0.0",
]
